[package]
name = "cleve"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.9", features = ["derive"] }
chrono = "0.4.38"
serde_with = "3.9.0"
